Some low hanging fruits